# timestamp-verify

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  tests.rs
static/: index.css  index.js
templates/: base.jinja  index.jinja  verify.jinja
